---------------------------------------------------------------------------------------------------
Version: 1.0.2
Date: 2020.11.XX
  Features:
    - Implemented the advanced gas refinery
    - Added settings to use Angel's material colors for pipes and intermediaries (default on)
    - Added icon for "Glowing hot iron plate"
    - Now reskins plate recipes for Lead and Tin when Angel's Smelting is not present
  Changes:
    - Changed how default indicators for true/false setting descriptions are handled internally
  Bugfixes:
    - Fixed that the recipes "Glowing hot iron plate" and "Steel plate" had improper icons due to recent updates in Angel's Smelting
  Locale:
    - Updated Czech and German localizations, added Brazilian Portuguese localization
---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 2020.10.04
  Features:
    - Implemented sulfur, lead, titanium, tin, aluminium, cobalt, gold, nickel, silicon, silver, tungsten, and zinc ores, and updated related recipe icons
  Changes:
    - Revised icon number overlay to retrieve tints from angelsmods global
  Bugfixes:
    - Fixed that recipe icons were twice as large as intended in alt-view
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 2020.09.21
  Features:
    - Initial work-in-progress release
    - Implements machines and related technologies from Angel's Smelting
    - Implements plates, wires and most ores added by Angel's Smelting and Angel's Refining
  Locale:
    - Includes Czech and German localizations