@@ -22,6 +22,7 @@ local technologies = {
     ["angels-metallurgy-2"] = {tier = 2, icon_name = "metallurgy"},
     ["angels-metallurgy-3"] = {tier = 3, icon_name = "metallurgy"},
     ["angels-metallurgy-4"] = {tier = 4, icon_name = "metallurgy"},
+    ["angels-metallurgy-5"] = {tier = 5, icon_name = "metallurgy"},
 
     -- Strand Casting
     ["strand-casting-1"] = {tier = 1, prog_tier = 2, icon_name = "strand-casting"},
